[package]
name = "jvm-find"
authors = ["Chris Moore <dev@chrismoore.dev>"]
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.26"
glob = { version = "0.3.0", optional = true }

[features]
default-features = ["glob"]

[[bin]]
name = "jvm-find"
required-features = ["glob"]
